@@ -37,10 +37,11 @@ sys.path.insert(0, "..")
 import unittest
 from twisted.trial import runner
 
-from tests.testmessages import silence_all_messages, restore_all_messages, search_output
+from tests.testmessages import silence_all_messages, restore_all_messages, search_output, clear_all_messages, get_messages
 verbose = int(os.environ.get('VERBOSE_T', '-1'))
-verbose = 2
 if verbose < 0: silence_all_messages()
+verbose = 2
+silence_all_messages()
 
 from pokernetwork.pokerclient import PokerClientFactory
 from pokernetwork import dispatch
@@ -146,7 +147,10 @@ class PokerClientUpgradeCheckClientVersion(unittest.TestCase):
 # -----------------------------------------------------------------------------------------------------
     def test01_CheckClientVersionRemote(self):
 	from pokernetwork.upgrade import CheckClientVersion
+        clear_all_messages()
 	checkClientVersion = CheckClientVersion(PokerSettingsMockupSource("rsync::poker/update/"), PokerSettingsMockupSource("rsync::foo/bar/"), (0, 0, 0), None)
+        self.assertEquals(get_messages(), ['CheckClientVersion checking version (0, 0, 0) against server',
+                                           'PokerRsync::spawn:  rsync --timeout=60 rsync::foo/bar//'])
 	self.assertEquals(False, "--dry-run" in checkClientVersion.rsync)
 	self.assertEquals(False, "--list-only" in checkClientVersion.rsync)
 # -----------------------------------------------------------------------------------------------------
@@ -219,6 +223,7 @@ class UpgraderTestCase(unittest.TestCase):
 def GetTestSuite():
     suite = unittest.TestSuite()
     loader = runner.TestLoader()
+#    loader.methodPrefix = "test01"
     suite.addTest(unittest.makeSuite(PokerClientUpgradeFailedTestCase))
     suite.addTest(unittest.makeSuite(PokerClientUpgradeCheckClientVersion))
     suite.addTest(loader.loadClass(UpgraderTestCase))
